2010-03-29  Levi Bard  <levi@unity3d.com>

	* SoftDebuggerSession.cs: Improve assembly matching.

2010-03-26  Levi Bard  <levi@unity3d.com>

	* SoftDebuggerSession.cs: Handle assembly unload.

2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerAdaptor.cs: Don't crash if something goes wrong
	  while getting type data.

2010-03-09  Michael Hutchinson  <mhutchinson@novell.com>

	* SoftDebuggerAdaptor.cs: Nicer log messages.

	* LoggingService.cs: Use custom logger for the new LogMessage
	  call. Remove unnecessary string.Format call.

2010-03-09  Martin Baulig  <martin@ximian.com>

	* SoftDebuggerSession.cs: Add protected virtual methods
	OnHandleEvent(), OnVMStartEvent(), OnVMDeathEvent() and
	OnBreakpointBound().

2010-03-05  Martin Baulig  <martin@ximian.com>

	Use the new Soft Debugger API to abort invocations.

	* SoftDebuggerAdaptor.cs (MethodCall.Abort): Implement this.

	* Mono.Debugger.Soft.dll:
	* Mono.Debugger.Soft.dll.mdb: Updated.

2010-03-03  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerSession.cs: Don't catch the thread abort
	  exception, unless there is a catchpoint for it. Based on a
	  patch by Levi Bard.

2010-03-02  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerAdaptor.cs: Renamed variable to improve
	  readability.

	* SoftEvaluationContext.cs: When calling a method, make sure
	  value type arguments are properly boxed when required.

2010-03-01  Michael Hutchinson  <mhutchinson@novell.com>

	* SoftDebuggerSession.cs:
	* Mono.Debugger.Soft.dll:
	* Mono.Debugger.Soft.dll.mdb: Updated SDB dll, stops uncaught
	  exception handler getting all caught exceptions on older
	  Monos, and updates protocol.

2010-03-01  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerAdaptor.cs: Improved support for indexers.
	  Improved GetType implementation, so that it can now properly
	  instantiate generic types.

2010-02-26  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerAdaptor.cs: Implement enum conversions.
