@@ -1,3 +1,9 @@
+2010-03-30  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* SoftDebuggerSession.cs:
+	* SoftDebuggerStartInfo.cs: Fix external console support
+	  again.
+
 2010-03-29  Levi Bard  <levi@unity3d.com>
 
 	* SoftDebuggerSession.cs: Improve assembly matching.
